# polkadot-sdk-solochain-template

./: .gitignore  Cargo.toml  README.md  create_custom_chain_spec.sh  custom-spec-raw.json  custom-spec.json  dummy_keys.txt  kill_chains.sh  package-lock.json  package.json  run_local_nodes.sh  run_web_ui.sh  sendPoW.js  sendTx.js  solochain-spec-raw.json  solochain-spec.json  start_nodes.sh
.github/workflows/: release.yml
node/: Cargo.toml
node/src/: benchmarking.rs  chain_spec.rs  command.rs  inner_import.rs  main.rs  pow.rs  rpc.rs  service.rs
pallets/sc-consensus-pow/: .cargo_vcs_info.json  Cargo.toml
pallets/sc-consensus-pow/src/: lib.rs
pallets/sp-consensus-pow/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
pow_reference/: README.md
pow_reference/POW/node/basic-pow/src/: service.rs
runtime/: Cargo.toml
runtime/src/: apis.rs  lib.rs
runtime/src/configs/: mod.rs
sha3pow/: Cargo.toml  README.md
sha3pow/src/: lib.rs
