[package]
name = 'sha3pow'
version = "3.0.0"
edition = '2018'
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
repository = 'https://github.com/substrate-developer-hub/recipes'
description = 'Sha3-based Proof of Work algorithms for Substrate'
license = "GPL-3.0-or-later"

[dependencies]
codec = { workspace = true}
rand = { version = "0.8", features = ["small_rng"] }
sha3 = "0.9"

# Substrate packages
sc-consensus-pow = { workspace = true}
sp-api = { workspace = true}
sp-consensus-pow = { workspace = true}
sp-core = { workspace = true}
sp-runtime = { workspace = true}
